--- a/style.css
+++ b/style.css
@@ -80,9 +80,28 @@ input,
   background-color: rgb(20, 20, 158);
   color: red;
 }
+/*********************SCORE***************/
+h4{
+  text-align: center;
+  font-size:30px;
+  text-transform: uppercase;
+  text-decoration: underline;
+}
+.score {
+  font-size: 50px;
+  text-align: center;
+  margin: 10px auto;
+background-color: rgb(255, 196, 0);
+width: 50px;
+height: 50px;
+}
+
+
 /********************************footer********************************/
 footer {
+ 
   width: 100%;
   height: 20em;
   background-color: #000;
+  
 }
